# AEROARM_WS

./: .gitignore  readme.md  robot_calibration.launch  robot_connection.launch
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/bag_plot/: .catkin  .rosinstall  local_setup.sh
devel/.private/calibration/: .catkin  local_setup.sh
devel/.private/catkin_simple/: .catkin  .rosinstall  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh  setup.sh
devel/.private/clik/: .catkin  .rosinstall  setup.sh
devel/.private/decomp_ros_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/decomp_ros_utils/: .catkin
devel/.private/decomp_test_node/: .catkin  .rosinstall  setup.sh
devel/.private/gripper_control/: .catkin  .rosinstall  setup.sh
devel/.private/kinematics_computing/: .catkin  setup.sh
devel/.private/load_capture/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/navigator/: .catkin
devel/.private/off_mission/: .catkin  .rosinstall  local_setup.sh
devel/.private/point_cloud_converter/: .catkin  .rosinstall
devel/.private/sim2real/: .catkin  .rosinstall  local_setup.sh
devel/.private/task_plan/: .catkin  local_setup.sh
devel/.private/testPub/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/velodyne_description/: .catkin  local_setup.sh
devel/.private/velodyne_gazebo_plugins/: .catkin  local_setup.sh  setup.sh
devel/include/calibration/: action.h  manipulator_mode.h  manipulator_modeRequest.h  manipulator_modeResponse.h  position_pub.h
devel/include/clik/: action.h  manipulator_mode.h  manipulator_modeRequest.h  manipulator_modeResponse.h  position_pub.h  traj_out_msg.h  traj_out_msgRequest.h  traj_out_msgResponse.h  traj_solver_msg.h  traj_solver_msgRequest.h  traj_solver_msgResponse.h
devel/include/decomp_ros_msgs/: Ellipsoid.h  EllipsoidArray.h  Polyhedron.h  PolyhedronArray.h
devel/include/navigator/: action.h  interface.h  response.h
devel/include/sim2real/: cmd_mode.h  cmd_modeRequest.h  cmd_modeResponse.h  position_pub.h
devel/include/task_plan/: traj_out_msg.h  traj_out_msgRequest.h  traj_out_msgResponse.h  traj_solver_msg.h  traj_solver_msgRequest.h  traj_solver_msgResponse.h
devel/lib/calibration/: calibration
devel/lib/clik/: clik  test_node
devel/lib/decomp_test_node/: test_path_decomp_2d  test_path_decomp_3d  test_seed_decomp
devel/lib/gripper_control/: gripper_control
devel/lib/kinematics_computing/: Joint_Talker
devel/lib/load_capture/: load_capture  load_capture_gripper1  load_capture_gripper2  load_capture_gripper3
devel/lib/navigator/: navigator
devel/lib/off_mission/: off_mission_node
devel/lib/pkgconfig/: bag_plot.pc  calibration.pc  catkin_simple.pc  catkin_tools_prebuild.pc  clik.pc  decomp_ros_msgs.pc  decomp_ros_utils.pc  decomp_test_node.pc  gripper_control.pc  kinematics_computing.pc  load_capture.pc  navigator.pc  off_mission.pc  point_cloud_converter.pc  sim2real.pc  task_plan.pc  testPub.pc  velodyne_description.pc  velodyne_gazebo_plugins.pc
devel/lib/point_cloud_converter/: point_cloud_converter_node
devel/lib/sim2real/: sim_to_real
devel/lib/task_plan/: pathfinder  traj_gen  traj_solver
devel/lib/testPub/: testRviz
logs/decomp_ros_msgs/: build.make.000.log.stderr
logs/decomp_ros_utils/: build.cmake.000.log.stderr
logs/gripper_control/: build.make.000.log.stderr  build.make.001.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.007.log.stderr  build.make.010.log.stderr
logs/kinematics_computing/: build.cmake.000.log.stderr
logs/navigator/: build.check.003.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr
logs/task_plan/: build.make.000.log.stderr
logs/testPub/: build.cmake.000.log.stderr
src/: .rosinstall
src/Gazebo_RL/: CMakeLists.txt  package.xml
src/Gazebo_RL/src/: floating_platform.cpp
src/aerial_toolbox/: CMakeLists.txt  README.md  package.xml  two_pose.bag
src/aerial_toolbox/msg/: toolbox.msg  toolbox_array.msg
src/aerial_toolbox/src/: realsense_sim.cpp
src/calibration/: CMakeLists.txt  package.xml
src/calibration/include/: clik_main.h  mylib.h
src/calibration/launch/: calibration.launch
src/calibration/msg/: action.msg  position_pub.msg
src/calibration/src/: clik_main.cpp  main.cpp
src/calibration/srv/: manipulator_mode.srv
src/clik/: CMakeLists.txt
src/clik/include/: clik_cplus.h  clik_main.h
src/clik/launch/: clik.launch
src/gripper_control/: CMakeLists.txt  gripper_control.cpp  package.xml
src/kinematics_computing/: CMakeLists.txt  package.xml
src/kinematics_computing1/: CMakeLists.txt
src/kinematics_computing1/src/: InKinematics.h
src/load_capture/: CMakeLists.txt  load_capture.cpp  load_capture_gripper1.cpp  load_capture_gripper2.cpp  load_capture_gripper3.cpp  package.xml
src/navigator1/: CMakeLists.txt
src/off_mission/: .gitignore  CMakeLists.txt
src/off_mission1/: CMakeLists.txt  package.xml
src/qt_joystick/: CMakeLists.txt  mainpage.dox  package.xml
src/rviz_package/: 1029.rviz  delta_rviz.launch  result_model1.urdf
src/rviz_package/src/testPub/: CMakeLists.txt
src/rviz_package/src/testPub/src/: testRviz.cpp
src/sim2real/: CMakeLists.txt  package.xml
src/task_plan/: CMakeLists.txt
src/task_plan/include/: a_star.h  auto_pick.h  bezier_base.h  end_effector_planning.h  flying_platform_planning.h  mylib.h  trajectory_generator.h  trajectory_solver.h  type_define.h
src/task_plan/include/sdf_tools/include/sdf_tools/: collision_map.hpp
src/task_plan/launch/: corridor.yaml  objects.yaml  obstacle.yaml  task_plan.launch
src/task_plan/msg/: corner.msg
src/task_plan/src/: a_star.cpp  auto_pick.cpp  box_pose_pub.cpp  end_effector_planning.cpp  flying_platform_planning.cpp  trajectory_generator.cpp  trajectory_solver.cpp
src/task_plan/srv/: traj_out_msg.srv
src/wifi_tool/: CMakeLists.txt  package.xml
(+448 files in other folders)
